--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 /* Body */
 body {
 	font-family: source-sans-pro;
-	background-image: url("water.gif");
+	background-image: url("../water.gif");
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
