--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,8 @@
 @charset "UTF-8";
 /* Body */
-html {
-	background-image: url("https://eliasbrodsky.github.io/images/water.gif");
-}
-
 body {
 	font-family: source-sans-pro;
-	background-image: url("https://eliasbrodsky.github.io/images/water.gif");
+	background: url("https://eliasbrodsky.github.io/images/water.gif");
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
