--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
 	padding-top: 7px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 7px;
 	background-color: #292626;
 	color: #E3F1F0;
 	font-size: 20px;
