--- a/css/main.css
+++ b/css/main.css
@@ -3,22 +3,20 @@
 body {
 	font-family: source-sans-pro;
 	background: url("https://eliasbrodsky.github.io/images/water.gif");
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
+	margin: 0px;
+	height: 100vh;
 	font-style: normal;
 	font-weight: 200;
 }
 /* Container */
 .container {
 	width: 90%;
-	height: 100%;
+	height: 100vh;
 	margin-top: 0px;
 	padding-top: 7px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-bottom: 7px;
+	margin-bottom: 0px;
 	background-color: #292626;
 	color: #E3F1F0;
 	font-size: 20px;
