--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ ul li:hover a {
 }
 /* More info */
 footer {
-	background-color: #FFFFFF;
+	background-color: #292626;
 	/*padding-bottom: 35px;*/
 }
 .footer_column {
@@ -253,7 +253,7 @@ footer {
 	text-align: center;
 	/*padding-top: 30px;*/
 	float: left;
-}
+/*}
 footer .footer_column h3 {
 	color: #B3B3B3;
 	text-align: center;
@@ -261,7 +261,7 @@ footer .footer_column h3 {
 footer .footer_column p {
 	color: #717070;
 	background-color: #FFFFFF;
-}
+}*/
 .cards {
 	width: 100%;
 	height: auto;
@@ -272,7 +272,7 @@ footer .footer_column p {
 	padding-left: 30px;
 	padding-right: 30px;
 	text-align: justify;
-	line-height: 25px;
+	/*line-height: 25px;*/
 	font-weight: lighter;
 	margin-left: 20px;
 	margin-right: 20px;
