--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,7 @@ footer {
 	text-align: center;
 	/*padding-top: 30px;*/
 	float: left;
-/*}
+}
 footer .footer_column h3 {
 	color: #B3B3B3;
 	text-align: center;
@@ -261,7 +261,7 @@ footer .footer_column h3 {
 footer .footer_column p {
 	color: #717070;
 	background-color: #FFFFFF;
-}*/
+}
 .cards {
 	width: 100%;
 	height: auto;
