--- a/css/secretcube.css
+++ b/css/secretcube.css
@@ -4,7 +4,7 @@
   box-sizing: border-box; }
 
 body {
-  background: #292626;
+  background: #252525;
   /*font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;*/
   font-weight: 300; }
 
@@ -17,23 +17,23 @@ body {
   -ms-perspective: 800px;
   -o-perspective: 800px;
   perspective: 800px;
-  -webkit-perspective-origin: 50% 300px;
-  -moz-perspective-origin: 50% 300px;
-  -ms-perspective-origin: 50% 300px;
-  -o-perspective-origin: 50% 300px;
-  perspective-origin: 50% 300px;
+  -webkit-perspective-origin: 50% 200px;
+  -moz-perspective-origin: 50% 200px;
+  -ms-perspective-origin: 50% 200px;
+  -o-perspective-origin: 50% 200px;
+  perspective-origin: 50% 200px;
   -webkit-transform: scale(0.8, 0.8);
   -moz-transform: scale(0.8, 0.8);
   -ms-transform: scale(0.8, 0.8);
   -o-transform: scale(0.8, 0.8);
   transform: scale(0.8, 0.8);
-  /*-webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.1))); */}
+  -webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.1))); }
 
 .cube {
   position: relative;
   margin: 0 auto;
-  height: 300px;
-  width: 300px;
+  height: 350px;
+  width: 350px;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
@@ -49,9 +49,9 @@ body {
   overflow: hidden;
   position: absolute;
   opacity: 0.9;
-  height: 300px;
-  width: 300px;
-  background-image: url("https://jordizle.com/static/img/codepen/blank.png");
+  height: 350px;
+  width: 350px;
+  background-color: rgba(50, 50, 50, 0.85);
   -webkit-touch-callout: none;
   -moz-touch-callout: none;
   -ms-touch-callout: none;
@@ -64,24 +64,24 @@ body {
   user-select: none; }
 
 .cube > div > div.cube-image {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  line-height: 200px;
-  font-size: 65px;
+  font-size: 1em;
+  line-height: 1em;
   text-align: center;
-  color: #1b9bd8;
+  color: #fff;;
   -webkit-transition: color 600ms;
   -moz-transition: color 600ms;
   -ms-transition: color 600ms;
   -o-transition: color 600ms;
   transition: color 600ms; }
-  /*.cube > div > div.cube-image.active {
-    color: red; }*/
+  .cube > div > div.cube-image.active {
+    color: red; }
 
 .cube > div:hover {
   cursor: pointer; }
@@ -114,27 +114,27 @@ body {
   outline: 1px solid transparent; }
 
 .cube > div:nth-child(4) {
-  -webkit-transform: rotateY(90deg) translateZ(100px);
-  -moz-transform: rotateY(90deg) translateZ(100px);
-  -ms-transform: rotateY(90deg) translateZ(100px);
-  -o-transform: rotateY(90deg) translateZ(100px);
-  transform: rotateY(90deg) translateZ(100px);
+  -webkit-transform: rotateY(180deg) translateZ(100px);
+  -moz-transform: rotateY(180deg) translateZ(100px);
+  -ms-transform: rotateY(180deg) translateZ(100px);
+  -o-transform: rotateY(180deg) translateZ(100px);
+  transform: rotateY(180deg) translateZ(100px);
   outline: 1px solid transparent; }
 
 .cube > div:nth-child(5) {
-  -webkit-transform: rotateY(90deg) translateZ(100px);
-  -moz-transform: rotateY(90deg) translateZ(100px);
-  -ms-transform: rotateY(90deg) translateZ(100px);
-  -o-transform: rotateY(90deg) translateZ(100px);
-  transform: rotateY(90deg) translateZ(100px);
+  -webkit-transform: rotateY(-90deg) translateZ(100px);
+  -moz-transform: rotateY(-90deg) translateZ(100px);
+  -ms-transform: rotateY(-90deg) translateZ(100px);
+  -o-transform: rotateY(-90deg) translateZ(100px);
+  transform: rotateY(-90deg) translateZ(100px);
   outline: 1px solid transparent; }
 
 .cube > div:nth-child(6) {
-  -webkit-transform: rotateY(90deg) translateZ(100px);
-  -moz-transform: rotateY(90deg) translateZ(100px);
-  -ms-transform: rotateY(90deg) translateZ(100px);
-  -o-transform: rotateY(90deg) translateZ(100px);
-  transform: rotateY(90deg) translateZ(100px);
+  -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+  -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+  -ms-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+  -o-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+  transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
   outline: 1px solid transparent; }
 
 object {
