--- a/css/secretcube.css
+++ b/css/secretcube.css
@@ -5,7 +5,7 @@
 
 body {
   background: #252525;
-  /*font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;*/
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
   font-weight: 300; }
 
 #wrapper {
@@ -32,8 +32,8 @@ body {
 .cube {
   position: relative;
   margin: 0 auto;
-  height: 350px;
-  width: 350px;
+  height: 200px;
+  width: 200px;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
@@ -49,9 +49,9 @@ body {
   overflow: hidden;
   position: absolute;
   opacity: 0.9;
-  height: 350px;
-  width: 350px;
-  background-color: rgba(50, 50, 50, 0.85);
+  height: 200px;
+  width: 200px;
+  background-image: url("https://jordizle.com/static/img/codepen/blank.png");
   -webkit-touch-callout: none;
   -moz-touch-callout: none;
   -ms-touch-callout: none;
@@ -64,17 +64,17 @@ body {
   user-select: none; }
 
 .cube > div > div.cube-image {
-  width: 350px;
-  height: 350px;
+  width: 200px;
+  height: 200px;
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  font-size: 1em;
-  line-height: 1em;
+  line-height: 200px;
+  font-size: 80px;
   text-align: center;
-  color: #fff;;
+  color: #1b9bd8;
   -webkit-transition: color 600ms;
   -moz-transition: color 600ms;
   -ms-transition: color 600ms;
