--- a/css/secretcube.css
+++ b/css/secretcube.css
@@ -32,8 +32,8 @@ body {
 .cube {
   position: relative;
   margin: 0 auto;
-  height: 200px;
-  width: 200px;
+  height: 360px;
+  width: 360px;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
@@ -49,9 +49,9 @@ body {
   overflow: hidden;
   position: absolute;
   opacity: 0.9;
-  height: 200px;
-  width: 200px;
-  background-image: url("https://jordizle.com/static/img/codepen/blank.png");
+  height: 360px;
+  width: 360px;
+  background: #252525;
   -webkit-touch-callout: none;
   -moz-touch-callout: none;
   -ms-touch-callout: none;
@@ -64,8 +64,8 @@ body {
   user-select: none; }
 
 .cube > div > div.cube-image {
-  width: 200px;
-  height: 200px;
+  width: 360px;
+  height: 360px;
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
@@ -74,14 +74,14 @@ body {
   line-height: 200px;
   font-size: 80px;
   text-align: center;
-  color: #1b9bd8;
+  color: #e6ebed;
   -webkit-transition: color 600ms;
   -moz-transition: color 600ms;
   -ms-transition: color 600ms;
   -o-transition: color 600ms;
   transition: color 600ms; }
   .cube > div > div.cube-image.active {
-    color: red; }
+    color: #6FE6DE; }
 
 .cube > div:hover {
   cursor: pointer; }
