--- a/css/secretcube.css
+++ b/css/secretcube.css
@@ -22,13 +22,12 @@ body {
   -ms-perspective-origin: 50% 200px;
   -o-perspective-origin: 50% 200px;
   perspective-origin: 50% 200px;
-  -webkit-transform: scale(0.8, 0.8);
-  -moz-transform: scale(0.8, 0.8);
-  -ms-transform: scale(0.8, 0.8);
-  -o-transform: scale(0.8, 0.8);
-  transform: scale(0.8, 0.8);
-  -webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.1))); }
-
+  -webkit-transform: scale(0.5, 0.5);
+  -moz-transform: scale(0.5, 0.5);
+  -ms-transform: scale(0.5, 0.5);
+  -o-transform: scale(0.5, 0.5);
+  transform: scale(0.5, 0.5);
+ 
 .cube {
   position: relative;
   margin: 0 auto;
@@ -71,8 +70,8 @@ body {
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  line-height: 200px;
-  font-size: 80px;
+  /*line-height: 200px;*/
+  font-size: 65px;
   text-align: center;
   color: #e6ebed;
   -webkit-transition: color 600ms;
