--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -245,7 +245,9 @@ ul li:hover a {
 }
 /* More info */
 footer {
-	background-color: #292626;
+	background-color: #ffffff;
+	color: #B3B3B3;
+	text-align: center;
 	/*padding-bottom: 35px;*/
 }
 .footer_column {
