--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -55,7 +55,7 @@ a:active {
 .cube {
     position: relative;
     margin: 0 auto;
-	margin-top: -50px;
+	/*margin-top: -50px;*/
     height: 380px;
     width: 380px;
     -webkit-transition: -webkit-transform 50ms linear;
@@ -80,6 +80,7 @@ a:active {
 }
 
 .cube > div {
+    overflow: hidden;
     position: absolute;
     height: 360px;
     width: 360px;
@@ -88,6 +89,7 @@ a:active {
     font-size: 4em;
     line-height: 4em;
     color: #fff;
+    line-height: 200px;
     border: 3px solid #EAF9F9;
     border-radius: 3px;
 }
