--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -87,9 +87,8 @@ a:active {
     padding: 20px;
     background-color: rgba(50, 50, 50, 0.85);
     font-size: 4em;
-    line-height: 4em;
+    line-height: 3em;
     color: #fff;
-    line-height: 200px;
     border: 3px solid #EAF9F9;
     border-radius: 3px;
 }
@@ -99,7 +98,8 @@ a:active {
     -moz-transform: rotateX(90deg) translateZ(200px);
     transform: rotateX(90deg) translateZ(200px);
 	text-align: center;
-	font-size: 65px;
+	/*font-size: 65px;*/
+	position: absolute;
 }
 
 .cube > div:nth-child(2) {
@@ -107,7 +107,8 @@ a:active {
     -moz-transform: translateZ(200px);
     transform: translateZ(200px);
 	text-align: center;
-	font-size: 65px;
+	/*font-size: 65px;*/
+	position: absolute;
 }
 
 .cube > div:nth-child(3) {
