--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -117,6 +117,7 @@ a:active {
     transform: rotateY(90deg) translateZ(200px);
     text-align: center;
 	font-size: 65px;
+	position: absolute;
 }
 
 .cube > div:nth-child(4) {
@@ -125,6 +126,7 @@ a:active {
     transform: rotateY(180deg) translateZ(200px);
 	text-align: center;
 	font-size: 65px;
+	position: absolute;
 }
 
 .cube > div:nth-child(5) {
@@ -133,6 +135,7 @@ a:active {
     transform: rotateY(-90deg) translateZ(200px);
 	text-align: center;
 	font-size: 65px;
+	position: absolute;
 }
 
 .cube > div:nth-child(6) {
@@ -141,6 +144,7 @@ a:active {
     transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
 	text-align: center;
 	font-size: 65px;
+	position: absolute;
 }
 
 object {
