--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -93,6 +93,33 @@ a:active {
     border-radius: 3px;
 }
 
+.cube > div > div.cube-image {
+  width: 360px;
+  height: 360px;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  /*rotate(180deg); (for above)
+  line-height: 200px;*/
+  font-size: 65px;
+  text-align: center;
+  color: #e6ebed;
+  -webkit-transition: color 600ms;
+  -moz-transition: color 600ms;
+  -ms-transition: color 600ms;
+  -o-transition: color 600ms;
+  transition: color 600ms; }
+  .cube > div > div.cube-image.active {
+    color: #6FE6DE; }
+
+.cube > div:hover {
+  cursor: pointer; }
+
+.cube > div:active {
+  cursor: pointer; }
+
 .cube > div:first-child  {
     -webkit-transform: rotateX(90deg) translateZ(200px);
     -moz-transform: rotateX(90deg) translateZ(200px);
