--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -29,7 +29,7 @@ a:active {
 /* Container */
 .container {
 	width: 90%;
-	height: 90vh;
+	height: 100vh;
 	margin-top: 0px;
 	padding-top: 7px;
 	margin-left: auto;
@@ -279,6 +279,9 @@ ul li:hover a {
 }
 /* More info */
 footer {
+	width: 90%;
+	height: auto;
+	margin: 0 auto;
 	background-color: #ffffff;
 	color: #B3B3B3;
 	text-align: center;
