--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -124,8 +124,12 @@ a:active {
     -webkit-transform: rotateX(90deg) translateZ(200px);
     -moz-transform: rotateX(90deg) translateZ(200px);
     transform: rotateX(90deg) translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 	text-align: center;
-	/*font-size: 65px;*/
+	font-size: 65px;
 	position: absolute;
 }
 
@@ -133,8 +137,12 @@ a:active {
     -webkit-transform: translateZ(200px);
     -moz-transform: translateZ(200px);
     transform: translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 	text-align: center;
-	/*font-size: 65px;*/
+	font-size: 65px;
 	position: absolute;
 }
 
@@ -142,6 +150,10 @@ a:active {
     -webkit-transform: rotateY(90deg) translateZ(200px);
     -moz-transform: rotateY(90deg) translateZ(200px);
     transform: rotateY(90deg) translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
     text-align: center;
 	font-size: 65px;
 	position: absolute;
@@ -151,6 +163,10 @@ a:active {
     -webkit-transform: rotateY(180deg) translateZ(200px);
     -moz-transform: rotateY(180deg) translateZ(200px);
     transform: rotateY(180deg) translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 	text-align: center;
 	font-size: 65px;
 	position: absolute;
@@ -160,6 +176,10 @@ a:active {
     -webkit-transform: rotateY(-90deg) translateZ(200px);
     -moz-transform: rotateY(-90deg) translateZ(200px);
     transform: rotateY(-90deg) translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 	text-align: center;
 	font-size: 65px;
 	position: absolute;
@@ -169,6 +189,10 @@ a:active {
     -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
     -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
     transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 	text-align: center;
 	font-size: 65px;
 	position: absolute;
