--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -91,6 +91,10 @@ a:active {
     color: #fff;
     border: 3px solid #EAF9F9;
     border-radius: 3px;
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 }
 
 .cube > div > div.cube-image {
@@ -101,6 +105,10 @@ a:active {
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
+	-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
   /*rotate(180deg); (for above)
   line-height: 200px;*/
   font-size: 65px;
