--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -314,7 +314,7 @@ footer {
 	width: 90%;
 	height: auto;
 	margin: 0 auto;
-	background-color: #ffffff;
+	background-color: #292626;
 	color: #B3B3B3;
 	text-align: center;
 	/*padding-bottom: 35px;*/
