--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -314,15 +314,18 @@ footer {
 	width: 90%;
 	height: auto;
 	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0px;
 	background-color: #292626;
 	color: #B3B3B3;
 	text-align: center;
 	/*padding-bottom: 35px;*/
 }
-.footer_column {
+/*.footer_column {
 	width: 50%;
 	text-align: center;
-	/*padding-top: 30px;*/
+	/*padding-top: 30px;
 	float: left;
 }
 footer .footer_column h3 {
@@ -343,11 +346,11 @@ footer .footer_column p {
 	padding-left: 30px;
 	padding-right: 30px;
 	text-align: justify;
-	/*line-height: 25px;*/
+	/*line-height: 25px;
 	font-weight: lighter;
 	margin-left: 20px;
 	margin-right: 20px;
-}
+}*/
 .copyright {
 	text-align: center;
 	color: #FFFFFF;
