--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -243,7 +243,7 @@ ul li:hover a {
 /* Hero Section */
 /* About Section */
 /* Stats Gallery */
-.stats {
+/*.stats {
 	color: #717070;
 	margin-bottom: 5px;
 }
@@ -253,7 +253,6 @@ ul li:hover a {
 	width: 100%;
 	background-color: #FFFFFF;
 	/* [disabled]min-width: 400px;
-*/
 	padding-bottom: 35px;
 	padding-top: 0px;
 	margin-top: -5px;
@@ -279,7 +278,7 @@ ul li:hover a {
 	margin-left: 0px;
 	color: #A3A3A3;
 }
-/* Parallax Section */
+ Parallax Section 
 .banner {
 	background-color: #2D9AB7;
 	background-image: url(file:///Macintosh%20HD/Users/birdsky/Documents/images/parallax.png);
@@ -309,7 +308,7 @@ ul li:hover a {
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
-/* More info */
+ More info */
 footer {
 	width: 90%;
 	height: auto;
@@ -320,6 +319,11 @@ footer {
 	background-color: #292626;
 	color: #B3B3B3;
 	text-align: center;
+	text-align: center;
+	color: #FFFFFF;
+	font-weight: lighter;
+	letter-spacing: 2px;
+	font-size: 14px;
 	/*padding-bottom: 35px;*/
 }
 /*.footer_column {
