--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -4,7 +4,7 @@ body {
 	font-family: source-sans-pro;
 	background: url("https://eliasbrodsky.github.io/images/water.gif");
 	margin: 0px;
-	height: 100vh;
+	height: auto;
 	font-style: normal;
 	font-weight: 200;
 }
