--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -38,6 +38,7 @@ a:active {
 	background-color: #292626;
 	color: #E3F1F0;
 	font-size: 20px;
+	font-family: proxima-nova;
 }
 /* box */
 .viewport {
