--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -29,7 +29,8 @@ a:active {
 /* Container */
 .container {
 	width: 90%;
-	height: 90%;
+	min-height: 90%;
+	/*height: 90%;*/
 	margin-top: 0px;
 	padding-top: 7px;
 	margin-left: auto;
