--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -29,7 +29,7 @@ a:active {
 /* Container */
 .container {
 	width: 90%;
-	min-height: 100%;
+	min-height: 90%;
 	/*height: 90%;*/
 	margin-top: 0px;
 	padding-top: 7px;
@@ -313,8 +313,8 @@ ul li:hover a {
  More info */
 footer {
 	width: 90%;
-	/*height: auto;*/
-	/*margin: 0 auto;*/
+	height: auto;
+	margin: 0 auto;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 0px;
