--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,6 +28,7 @@ a:active {
 }
 /* Container */
 .container {
+	position: fixed;
 	width: 90%;
 	min-height: 90%;
 	/*height: 90%;*/
@@ -37,6 +38,7 @@ a:active {
 	margin-right: auto;
 	margin-bottom: auto;
 	background-color: #292626;
+	transform: translateX(calc((100% - 100vw) / 2));
 	color: #E3F1F0;
 	font-size: 20px;
 	font-family: proxima-nova;
