--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -38,7 +38,7 @@ a:active {
 	margin-right: auto;
 	margin-bottom: auto;
 	background-color: #292626;
-	transform: translateX(calc((100% - 100vw) / 2));
+	transform: translateY(calc((90% - 90vw) / 2));
 	color: #E3F1F0;
 	font-size: 20px;
 	font-family: proxima-nova;
