--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,8 +28,8 @@ a:active {
 }
 /* Container */
 .container {
-	position: fixed;
-	width: 90%;
+	position: absolute;
+	min-width: 90%;
 	min-height: 90%;
 	/*height: 90%;*/
 	margin-top: 0px;
@@ -38,7 +38,7 @@ a:active {
 	margin-right: auto;
 	margin-bottom: auto;
 	background-color: #292626;
-	transform: translateY(calc((90% - 90vw) / 2));
+	transform: translateY(calc((100% - 100vw) / 2));
 	color: #E3F1F0;
 	font-size: 20px;
 	font-family: proxima-nova;
