--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,7 +28,7 @@ a:active {
 }
 /* Container */
 .container {
-	min-width: 90%;
+	width: 90%;
 	min-height: 90%;
 	/*height: 90%;*/
 	margin-top: 0px;
