--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,8 +28,8 @@ a:active {
 }
 /* Container */
 .container {
-	width: 90%;
-	min-height: 90%;
+	width: 90vh;
+	min-height: 90vh;
 	/*height: 90%;*/
 	margin-top: 0px;
 	padding-top: 7px;
