--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -27,7 +27,7 @@ a:active {
   color: #F6FFFF;
 }
 /* Container */
-.container {
+.container-fluid {
 	width: 90vh;
 	min-height: 90vh;
 	/*height: 90%;*/
