--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,7 +28,7 @@ a:active {
 }
 /* Container */
 .container-fluid {
-	width: 90vh;
+	min-width: 90vh;
 	min-height: 90vh;
 	/*height: 90%;*/
 	margin-top: 0px;
