--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,13 +28,13 @@ a:active {
 }
 /* Container */
 .container-fluid {
-	width: 100vh;
+	width: auto;
 	min-height: 90vh;
 	/*height: 90%;*/
 	margin-top: 0px;
 	padding-top: 7px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 5vh;
+	margin-right: 5vh;
 	margin-bottom: auto;
 	background-color: #131414;
 	color: #E3F1F0;
