--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -312,9 +312,9 @@ ul li:hover a {
 }
  More info */
 footer {
-	width: auto;
+	min-width: 90vh;
 	height: auto;
-	margin: 0 auto;
+	margin-top: 0 auto;
 	margin-left: 10vh;
 	margin-right: 10vh;
 	margin-bottom: 0px;
