--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -318,7 +318,7 @@ footer {
 	margin-left: 10vh;
 	margin-right: 10vh;
 	margin-bottom: 0px;
-	background-color: #292626;
+	/*background-color: #292626;*/
 	color: #B3B3B3;
 	text-align: center;
 	color: #FFFFFF;
