--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -356,7 +356,7 @@ footer .footer_column p {
 	margin-left: 20px;
 	margin-right: 20px;
 }*/
-.copyright {
+.copyright-fluid {
 	text-align: center;
 	color: #FFFFFF;
 	font-weight: lighter;
