--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -359,6 +359,7 @@ footer .footer_column p {
 .copyright-fluid {
 	text-align: center;
 	color: #FFFFFF;
+	background-color: #131414;
 	font-weight: lighter;
 	letter-spacing: 2px;
 	font-size: 14px;
