--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -31,8 +31,8 @@ a:active {
 	width: auto;
 	min-height: 90vh;
 	/*height: 90%;*/
-	margin-top: 0px;
-	padding-top: 7px;
+	margin-top: 5vh;
+	/*padding-top: 7px;*/
 	margin-left: 10vh;
 	margin-right: 10vh;
 	margin-bottom: auto;
@@ -312,7 +312,7 @@ ul li:hover a {
 }
  More info */
 footer {
-	min-width: 90vh;
+	width: 90vh;
 	height: auto;
 	margin-top: 0 auto;
 	margin-left: 10vh;
