--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -312,7 +312,7 @@ ul li:hover a {
 }
  More info */
 footer {
-	width: 90vh;
+	width: auto;
 	height: auto;
 	margin-top: 0 auto;
 	margin-left: 10vh;
