--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -32,7 +32,7 @@ a:active {
 	min-height: 90vh;
 	/*height: 90%;*/
 	margin-top: 3vh;
-	/*padding-top: 7px;*/
+	padding-top: 3px;
 	margin-left: 10vh;
 	margin-right: 10vh;
 	margin-bottom: auto;
