--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -31,11 +31,11 @@ a:active {
 	width: auto;
 	min-height: 90vh;
 	/*height: 90%;*/
-	margin-top: 1vh;
-	padding-top: 3px;
+	margin-top: 11px;
+	padding-top: 13px;
 	margin-left: 10vh;
 	margin-right: 10vh;
-	margin-bottom: auto;
+	margin-bottom: 0px;
 	background-color: #131414;
 	color: #E3F1F0;
 	font-size: 20px;
