--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -10,16 +10,16 @@ body {
 }
 /* unvisited link */
 a:link {
-  color: #5BCBCF;
+  color: #4fdbdb;
 }
 
 a:visited {
-  color: #5BCBCF;
+  color: #4fdbdb;
 }
 
 /* mouse over link */
 a:hover {
-  color: #6FE6DE;
+  color: #43e6da;
 }
 
 /* selected link */
@@ -122,7 +122,7 @@ user-select: none; /* Standard */
   -o-transition: color 600ms;
   transition: color 600ms; }
   .cube > div > div.cube-image.active {
-    color: #6FE6DE; }
+    color: #5BCBCF; }
 
 .cube > div:hover {
   cursor: pointer; }
