--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ a:active {
 	background-color: #131414;
 	color: #E3F1F0;
 	font-size: 20px;
-	font-family: proxima_nova;
+	font-family: proxima_nova_rgregular;
 }
 /* box */
 .viewport {
