--- a/css/main.css
+++ b/css/main.css
@@ -298,12 +298,15 @@ footer {
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
-.container header nav {
-	margin-top: 0px;
-	margin-right: 0px;
+.container-fluid {
+	width: auto;
+	min-height: 90vh;
+	/*height: 90%;*/
+	margin-top: 11px;
+	padding-top: 13px;
+	margin-left: 10vh;
+	margin-right: 10vh;
 	margin-bottom: 0px;
-	margin-left: 0px;
-	width: 100%;
 	float: none;
 	display: none;
 }
