--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,7 @@ footer {
 }
 
 /* Mobile */
-@media (max-width: 90vh) {
+@media (max-width: auto) {
 .logo {
 	width: 100%;
 	text-align: center;
