--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -100,6 +100,10 @@ a:active {
 .cube a {
     color: #4fdbdb;
 }
+/*may become obsolete*/
+.cube a:hover {
+    color: #23fae8;
+}
 
 .cube > div {
     overflow: hidden;
