--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -97,13 +97,13 @@ a:active {
     margin-top: 0;
 }
 
-.cube a {
+/*.cube a {
     color: #4fdbdb;
 }
-/*may become obsolete*/
+may become obsolete
 .cube a:hover {
     color: #23fae8;
-}
+}*/
 
 .cube > div {
     overflow: hidden;
