--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -99,11 +99,12 @@ a:active {
 
 /*.cube a {
     color: #4fdbdb;
-}
-may become obsolete
+}*/
+
 .cube a:hover {
     color: #23fae8;
-}*/
+    text-decoration: none;
+}
 
 .cube > div {
     overflow: hidden;
