--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -28,24 +28,6 @@ body {
 	font-style: normal;
 	font-weight: 200;
 }
-/* unvisited link */
-a:link {
-  color: #4fdbdb;
-}
-
-a:visited {
-  color: #4fdbdb;
-}
-
-/* mouse over link */
-a:hover {
-  color: #23fae8;
-}
-
-/* selected link */
-a:active {
-  color: #F6FFFF;
-}
 /* Container */
 .container-fluid {
 	width: auto;
@@ -60,6 +42,24 @@ a:active {
 	color: #E3F1F0;
 	font-size: 20px;
 	font-family: proxima_nova_rgregular;
+}
+/* unvisited link */
+.container-fluid a:link {
+  color: #4fdbdb;
+}
+
+.container-fluid a:visited {
+  color: #4fdbdb;
+}
+
+/* mouse over link */
+.container-fluid a:hover {
+  color: #23fae8;
+}
+
+/* selected link */
+.container-fluid a:active {
+  color: #F6FFFF;
 }
 /* box */
 .viewport {
