--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -97,14 +97,14 @@ body {
     margin-top: 0;
 }
 
-/*.cube a {
-    color: #4fdbdb;
-}*/
+.cube a {
+    color: #fff;
+}
 
-.cube a:hover {
+/*.cube a:hover {
     color: #23fae8;
     text-decoration: none;
-}
+}*/
 
 .cube > div {
     overflow: hidden;
@@ -147,7 +147,16 @@ user-select: none; /* Standard */
   -o-transition: color 600ms;
   transition: color 600ms; }
   .cube > div > div.cube-image.active {
-    color: #5BCBCF; }
+    color: #4fdbdb; }
+
+.cube > div > div.cube-image.active a {
+    color: #4fdbdb;
+    text-decoration: none;
+}
+
+.cube > div > div.cube-image.active a:hover {
+    color: #23fae8;
+}
 
 .cube > div:hover {
   cursor: pointer; }
