--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -46,10 +46,12 @@ body {
 /* unvisited link */
 .container-fluid a:link {
   color: #4fdbdb;
+  text-decoration: none;
 }
 
 .container-fluid a:visited {
   color: #4fdbdb;
+  text-decoration: none;
 }
 
 /* mouse over link */
@@ -99,6 +101,7 @@ body {
 
 .cube a {
     color: #fff;
+    text-decoration: none;
 }
 
 /*.cube a:hover {
