--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -152,6 +152,16 @@ user-select: none; /* Standard */
   .cube > div > div.cube-image.active {
     color: #4fdbdb; }
 
+.cube > div > div.cube-image a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.cube > div > div.cube-image a:hover
+    color: #fff;
+    text-decoration: none;
+}
+
 .cube > div > div.cube-image.active a {
     color: #4fdbdb;
     text-decoration: none;
