--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -152,7 +152,7 @@ user-select: none; /* Standard */
   .cube > div > div.cube-image.active {
     color: #4fdbdb; }
 
-.cube > div > div.cube-image a {
+/*.cube > div > div.cube-image a {
     color: #fff;
     text-decoration: none;
 }
@@ -160,7 +160,7 @@ user-select: none; /* Standard */
 .cube > div > div.cube-image a:hover
     color: #fff;
     text-decoration: none;
-}
+}*/
 
 .cube > div > div.cube-image.active a {
     color: #4fdbdb;
