--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -100,7 +100,7 @@ body {
 }
 
 .cube a {
-    color: #fff;
+    color: #fff !important;
     text-decoration: none;
 }
 
@@ -152,12 +152,12 @@ user-select: none; /* Standard */
   .cube > div > div.cube-image.active {
     color: #4fdbdb; }
 
-/*.cube > div > div.cube-image a {
-    color: #fff;
+.cube > div > div.cube-image a {
+    color: #fff !important;
     text-decoration: none;
 }
 
-.cube > div > div.cube-image a:hover
+/*.cube > div > div.cube-image a:hover
     color: #fff;
     text-decoration: none;
 }*/
