--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -46,12 +46,10 @@ body {
 /* unvisited link */
 .container-fluid a:link {
   color: #4fdbdb;
-  text-decoration: none;
 }
 
 .container-fluid a:visited {
   color: #4fdbdb;
-  text-decoration: none;
 }
 
 /* mouse over link */
@@ -154,7 +152,7 @@ user-select: none; /* Standard */
 
 .cube > div > div.cube-image a {
     color: #fff !important;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 /*.cube > div > div.cube-image a:hover
@@ -164,7 +162,7 @@ user-select: none; /* Standard */
 
 .cube > div > div.cube-image.active a {
     color: #4fdbdb;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .cube > div > div.cube-image.active a:hover {
