--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -150,18 +150,18 @@ user-select: none; /* Standard */
   .cube > div > div.cube-image.active {
     color: #4fdbdb; }
 
-.cube > div > div.cube-image a {
+/*.cube > div > div.cube-image a {
     color: #fff !important;
     text-decoration: none !important;
 }
 
-/*.cube > div > div.cube-image a:hover
+.cube > div > div.cube-image a:hover
     color: #fff;
     text-decoration: none;
 }*/
 
 .cube > div > div.cube-image.active a {
-    color: #4fdbdb;
+    color: #4fdbdb !important;
     text-decoration: none !important;
 }
 
