--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -97,12 +97,12 @@ body {
     margin-top: 0;
 }
 
-.cube a {
+/*.cube a {
     color: #fff !important;
     text-decoration: none;
 }
 
-/*.cube a:hover {
+.cube a:hover {
     color: #23fae8;
     text-decoration: none;
 }*/
@@ -150,12 +150,12 @@ user-select: none; /* Standard */
   .cube > div > div.cube-image.active {
     color: #4fdbdb; }
 
-/*.cube > div > div.cube-image a {
+.cube > div > div.cube-image a {
     color: #fff !important;
     text-decoration: none !important;
 }
 
-.cube > div > div.cube-image a:hover
+/*.cube > div > div.cube-image a:hover
     color: #fff;
     text-decoration: none;
 }*/
@@ -166,7 +166,7 @@ user-select: none; /* Standard */
 }
 
 .cube > div > div.cube-image.active a:hover {
-    color: #23fae8;
+    color: #23fae8 !important;
 }
 
 .cube > div:hover {
