--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -152,7 +152,12 @@ user-select: none; /* Standard */
 
 .cube > div > div.cube-image a {
     color: #fff !important;
-    text-decoration: none !important;
+    text-decoration: none !important
+  -webkit-transition: color 600ms;
+  -moz-transition: color 600ms;
+  -ms-transition: color 600ms;
+  -o-transition: color 600ms;
+  transition: color 600ms;;
 }
 
 /*.cube > div > div.cube-image a:hover
