--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -157,7 +157,7 @@ user-select: none; /* Standard */
   -moz-transition: color 600ms;
   -ms-transition: color 600ms;
   -o-transition: color 600ms;
-  transition: color 600ms;;
+  transition: color 600ms;
 }
 
 /*.cube > div > div.cube-image a:hover
