--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -97,12 +97,11 @@ body {
     margin-top: 0;
 }
 
-/*.cube a {
-    color: #fff !important;
-    text-decoration: none;
+.cube a {
+    text-decoration: none !important;
 }
 
-.cube a:hover {
+/*.cube a:hover {
     color: #23fae8;
     text-decoration: none;
 }*/
@@ -171,7 +170,8 @@ user-select: none; /* Standard */
 }
 
 .cube > div > div.cube-image.active a:hover {
-    color: #23fae8 !important;
+    color: #23fae8 !important
+    text-decoration: none !important;
 }
 
 .cube > div:hover {
