--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -101,10 +101,10 @@ body {
     text-decoration: none !important;
 }
 
-/*.cube a:hover {
+.cube a:hover {
     color: #23fae8;
     text-decoration: none;
-}*/
+}
 
 .cube > div {
     overflow: hidden;
