--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -304,6 +304,7 @@ footer {
 }
 
 .copyright-fluid {
+	font-family: proxima_nova_rgregular;
 	text-align: center;
 	color: #FFFFFF;
 	font-weight: lighter;
