--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -159,10 +159,15 @@ user-select: none; /* Standard */
   transition: color 600ms;
 }
 
-/*.cube > div > div.cube-image a:hover
+.cube > div > div.cube-image a:hover
     color: #fff;
     text-decoration: none;
-}*/
+  -webkit-transition: color 600ms;
+  -moz-transition: color 600ms;
+  -ms-transition: color 600ms;
+  -o-transition: color 600ms;
+  transition: color 600ms;
+}
 
 .cube > div > div.cube-image.active a {
     color: #4fdbdb !important;
