--- a/css/pages.css
+++ b/css/pages.css
@@ -76,6 +76,7 @@ body {
 	margin-right: 15vh;
 	margin-bottom: auto;
 	font-size: 50px;
+	letter-spacing: 4px;
 	font-family: proxima_nova_rgbold;
 }
 
