--- a/css/pages.css
+++ b/css/pages.css
@@ -76,8 +76,10 @@ body {
 	margin-right: 15vh;
 	margin-bottom: auto;
 	font-size: 50px;
-	letter-spacing: 4px;
 	font-family: proxima_nova_rgbold;
+}
+#spaces {
+	letter-spacing: 4px;
 }
 
 /* Navigation */
