--- a/css/pages.css
+++ b/css/pages.css
@@ -67,6 +67,7 @@ body {
 	margin-right: 15vh;
 	margin-bottom: auto;
 	font-size: 20px;
+	text-align: center;
 	font-family: proxima_nova_rgregular;
 }
 
