--- a/css/pages.css
+++ b/css/pages.css
@@ -68,6 +68,7 @@ body {
 	margin-bottom: auto;
 	font-size: 20px;
 	text-align: center;
+	position: fixed;
 	font-family: proxima_nova_rgregular;
 }
 
