--- a/css/pages.css
+++ b/css/pages.css
@@ -62,21 +62,21 @@ body {
 }
 /*idk yet*/
 #wrapper {
-	margin-top: 5vh;
+	/*margin-top: 5vh;
 	margin-left: 15vh;
 	margin-right: 15vh;
 	margin-bottom: auto;
-	font-size: 20px;
+	font-size: 20px;*/
 	text-align: center;
-	position: static;
+	/*position: static;*/
 	font-family: proxima_nova_rgregular;
 }
 
 #comingsoon {
-	margin-top: 5vh;
+	/*margin-top: 5vh;
 	margin-left: 15vh;
 	margin-right: 15vh;
-	margin-bottom: auto;
+	margin-bottom: auto;*/
 	font-size: 50px;
 	font-family: proxima_nova_rgbold;
 }
