--- a/css/pages.css
+++ b/css/pages.css
@@ -65,8 +65,8 @@ body {
 	/*margin-top: 5vh;
 	margin-left: 15vh;
 	margin-right: 15vh;
-	margin-bottom: auto;
-	font-size: 20px;*/
+	margin-bottom: auto;*/
+	font-size: 20px;
 	text-align: center;
 	/*position: static;*/
 	font-family: proxima_nova_rgregular;
