--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,10 @@ body {
 .container-fluid a:active {
   color: #F6FFFF;
 }
+
+#name {
+	font-family: proxima_nova_rgbold;
+}
 /* box */
 .viewport {
     -webkit-perspective: 800px;
