--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -334,6 +334,7 @@ footer {
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
+	text-align: center;
 	width: 100%;
 	float: none;
 	display: none;
@@ -350,7 +351,7 @@ nav ul li {
 }
 .text_column {
 	width: 100%;
-	text-align: justify;
+	text-align: center;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 0px;
