--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -320,15 +320,15 @@ footer {
 }
 
 /* Mobile */
-@media (max-width: auto) {
-.logo {
+@media (max-width: 320px) {
+/* .logo {
 	width: 100%;
 	text-align: center;
 	margin-top: 13px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
-}
+} */
 .container header nav {
 	margin-top: 0px;
 	margin-right: 0px;
@@ -359,6 +359,9 @@ nav ul li {
 }
 .thumbnail {
 	width: 100%;
+}
+.container-fluid {
+	width: auto;
 }
 .footer_column {
 	width: 100%;
