--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -320,7 +320,7 @@ footer {
 }
 
 /* Mobile */
-@media (max-width: 450px) {
+@media (max-width: 320px) {
 /* .logo {
 	width: 100%;
 	text-align: center;
@@ -361,7 +361,9 @@ nav ul li {
 	width: 100%;
 }
 .container-fluid {
-	width: 100%;
+	width: auto;
+	margin-left: 3vh;
+	margin-right: 3vh;
 }
 .footer_column {
 	width: 100%;
