--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -466,6 +466,11 @@ nav ul li {
 	padding-left: 20px;
 	padding-right: 20px;
 }
+.container-fluid {
+	width: auto;
+	margin-left: 3vh;
+	margin-right: 3vh;
+}
 .footer_column {
 	width: 100%;
 }
