--- a/css/secretmain.css
+++ b/css/secretmain.css
@@ -328,7 +328,7 @@ footer {
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
-} */
+} 
 .container header nav {
 	margin-top: 0px;
 	margin-right: 0px;
@@ -356,7 +356,7 @@ nav ul li {
 	padding-right: 0px;
 	padding-bottom: 0px;
 	padding-left: 0px;
-}
+}*/
 .thumbnail {
 	width: 100%;
 }
@@ -369,7 +369,7 @@ nav ul li {
 	width: 100%;
 	margin-top: 0px;
 }
-.parallax {
+/*.parallax {
 	text-align: center;
 	margin-top: 0px;
 	margin-right: 0px;
@@ -394,12 +394,12 @@ nav ul li {
 	margin-left: 12px;
 	float: none;
 	text-align: center;
-}
+}*/
 .banner {
 	background-color: #2D9AB7;
 	background-image: none;
 }
-.tagline {
+/*.tagline {
 	margin-top: 20px;
 	line-height: 22px;
 }
@@ -408,7 +408,7 @@ nav ul li {
 	padding-right: 10px;
 	line-height: 22px;
 	text-align: center;
-}
+}*/
 }
 
 /* Small Tablets */
@@ -457,6 +457,11 @@ nav ul li {
 }
 .thumbnail {
 	width: 100%;
+}
+.container-fluid {
+	width: auto;
+	margin-left: 3vh;
+	margin-right: 3vh;
 }
 .footer_column {
 	width: 100%;
